k8s/base/basedequestions/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request
  template:
    metadata:
      labels:
        app: request
    spec:
      imagePullSecrets:
        - name: gitlab-reg
      containers:
        - name: request
          image: gitlab.sciences-po.fr:4567/cdspit/base-de-questions/basedequestions:latest
          command: ["./entrypoint.sh"]
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          volumeMounts:
            - name: media-volume
              mountPath: /app/media
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
