k8s/base/basedequestions/service-nginx-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  selector:
    app: nginx-ingress-controller  # Assure-toi que ce label correspond à tes pods nginx-ingress-controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: LoadBalancer  # Utilise LoadBalancer pour exposer à l'extérieur du cluster
