k8s/base/basedequestions/service-nginx-media.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-media-service
  namespace: basedequestions
spec:
  selector:
    app: nginx-media
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
