k8s/base/basedequestions/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basedequestions
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: basedequestions
